--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 	<script src="js/three.min.js"></script> 
-	<script src="js/scripts.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
